--- a/app/globals.css
+++ b/app/globals.css
@@ -9,3 +9,7 @@ body{
     box-sizing: border-box;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
+/* Hide the scrollbar */
+::-webkit-scrollbar {
+    display: none;
+}
